fix: create user internal endpoint
