# user-service/swagger/swagger.json
@@ -174,13 +174,6 @@
                 "operationId": "UserInternalController.Create User",
                 "parameters": [
                     {
-                        "in": "header",
-                        "name": "authorization",
-                        "description": "bearer token in jwt",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
                         "in": "body",
                         "name": "params",
                         "description": "body of this request",
